# QtUtils

./: README.md
QtDirectoryHook/: CMakeLists.txt  README.md
QtDirectoryHook/include/qt_directory_hook/: application_window.h
QtDirectoryHook/src/: CMakeLists.txt  application_window.cpp  main.cpp
QtLinguistXslTransformer/: README.md  xsl_transform.py
QtLinguistXslTransformer/xslt/: to_excel_table.xsl  to_html_table.xsl
QtXslTransformer/: CMakeLists.txt  README.md
QtXslTransformer/include/xsl_transformer/: xsl_transformer_dialog.h
QtXslTransformer/src/: CMakeLists.txt  main.cpp  xsl_transformer_dialog.cpp
